# compiler-for-ordinance

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: README.md
src/: cache.rs  git.rs  git_repo.rs  jurisdictions.rs  lib.rs  main.rs  markdown.rs  render.rs  xml_parser.rs
tests/: smoke.rs
